# oye-chats-platform

./: .code-review-graphignore  .gitignore  AGENTS.md  CLAUDE.md  CODEX_PROMPTS.md  DEPLOYMENT.md  LLM_MIGRATION_PROMPT.md  README.md  TODOS.md  docker-compose.yml
api/: .env.example  .gitignore  Dockerfile  gunicorn.conf.py  pyproject.toml  scratch_test_e2e.py  test_llm.py  test_ws_integration.py
api/alembic/: env.py
api/app/: config.py  main.py
api/emails/: 01_password_reset.brevo.html  01_password_reset.html  02_qualified_lead.brevo.html  02_qualified_lead.html  03_handoff_request.brevo.html  03_handoff_request.html  04_missed_callback.brevo.html  04_missed_callback.html  05_offline_message.brevo.html  05_offline_message.html  06_chat_transcript.html  07_visitor_confirmation.brevo.html  07_visitor_confirmation.html  BREVO_UPLOAD.md  brevo_template_ids.json
api/nginx/: oyechats-api.conf  oyechats-locations.conf
api/scripts/: add_client.py  audit_credit_ledger.py  backup.sh  cleanup_bant_routing_signals.py  generate_vapid_keys.py  preflight_plan_migration.py  razorpay_smoke_test.py  razorpay_subscription_smoke_test.py  render_email_previews.py  seed_standard_plus_10k.py  set_razorpay_plan_ids.py  setup_test_clients.py  upload_brevo_templates.py
api/systemd/: oyechats-api.service  oyechats-worker.service
api/tests/: conftest.py  test_account_plan_resolution.py  test_affiliate_invite_atomicity.py  test_affiliate_service.py  test_agent_login_selection.py  test_agent_rbac.py  test_auth_routes.py  test_billing_locks.py  test_bot_allowed_domains_schema.py  test_bot_demo_routes.py  (+68 more)
(+536 files in other folders)
