[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "oyechats-api"
version = "0.1.0"
description = "OyeChats RAG chatbot platform API"
requires-python = ">=3.11,<3.12"

dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.3.0,<0.4.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "litellm==1.82.6",
    "langchain-text-splitters>=0.2.0",
    "langchain-core>=0.2.0",
    "openai>=1.0.0",
    "langfuse>=4.0.0,<5.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "boto3>=1.34.0",
    "playwright>=1.45.0",
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",
    "Pillow>=10.0.0",
    "bcrypt>=4.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "crawl4ai>=0.8.6",
    "psutil>=5.9.0",
    "defusedxml>=0.7.1",
    "html2text>=2025.4.15",
    "beautifulsoup4>=4.14.3",
    "slowapi>=0.1.9",
    "redis[hiredis]>=5.0.0,<6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
